# pretty-print

./: Cargo.toml
.github/workflows/: rust.yml
.run/: Test All.run.xml
projects/pretty-print/: Cargo.toml  readme.md
projects/pretty-print/src/: lib.rs
projects/pretty-print/src/block/: mod.rs
projects/pretty-print/src/blocks/: k_and_r_bracket.rs  mod.rs
projects/pretty-print/src/helpers/: affixes.rs  hard_block.rs  k_and_r_bracket.rs  mod.rs  sequence.rs  soft_block.rs
projects/pretty-print/src/providers/: mod.rs
projects/pretty-print/src/render/: mod.rs  terminal.rs  write_fmt.rs  write_io.rs
projects/pretty-print/src/traits/: mod.rs  printer.rs
projects/pretty-print/src/tree/: display.rs  into.rs  mod.rs
projects/pretty-print/tests/: main.rs  readme.rs
projects/pretty-test/: Cargo.toml
projects/pretty-test/src/: lib.rs
projects/pretty-test/tests/: main.rs
