[package]
name = "pretty-print"
version = "0.1.2"
authors = ["Aster <192607617@qq.com>"]
description = "pretty print tree"
repository = "https://github.com/oovm/pretty-print"
documentation = "https://docs.rs/pretty-print"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
arrayvec = "0.5"
typed-arena = "2.0.0"
termcolor = { version = "1.1.0", optional = true }
unicode-segmentation = "1"

[dependencies.pretty]
version = "0.12.1"
default-features = false
features = ["termcolor"]

[dev-dependencies]

[features]
default = ["termcolor"]
std = []