[package]
name = "pretty-print"
version = "0.1.5"
authors = ["Aster <192607617@qq.com>"]
description = "pretty print tree"
repository = "https://github.com/oovm/pretty-print"
documentation = "https://docs.rs/pretty-print"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
unicode-segmentation = "1.10.1"

[dependencies.color-ansi]
version = "0.1.0"
#default-features = false
#features = ["termcolor"]
#path = 'C:\Users\Dell\CLionProjects\color-rs\projects\color-ansi'

[dev-dependencies]


[features]
default = ["std"]
std = []