[package]
name = "pretty-test"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
pretty = "0.12.1"

[dependencies.pretty-print]
version = "*"
default-features = false
features = ["std"]
path = "../pretty-print"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
